--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="assets/logo.png" alt="Logo de la empresa" class="logo me-3">
       <div>
         <h5 class="mb-0">Nombre de la Empresa</h5>
-        <small class="text-muted">Atendido por: Chan Mendoza</small>
+        <small class="text-muted">Atendido por: Carlos Córdoba</small>
       </div>
     </div>
 
@@ -29,7 +29,7 @@
     <form id="formulario">
       <div class="mb-3">
         <label for="nombre" class="form-label">Nombre completo</label>
-        <input type="text" class="form-control" id="nombre" required placeholder="Ej: Juan Pérez">
+        <input type="text" class="form-control" id="nombre" required placeholder="Escribe tu nombre">
       </div>
 
       <div class="mb-3">
