--- a/index.html
+++ b/index.html
@@ -4,60 +4,58 @@
   <meta charset="UTF-8">
   <title>Propuesta Inmobiliaria</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-  <div class="container-box">
-    <!-- Encabezado -->
-    <div class="d-flex align-items-center mb-3">
-      <img src="assets/logo.png" alt="Logo de la empresa" class="logo me-3">
-      <div>
-        <h5 class="mb-0">Nombre de la Empresa</h5>
-        <small class="text-muted">Atendido por: <br>Carlos Córdoba</small>
+  <!-- Fondo con capa blanca -->
+  <div class="background-layer">
+    <div class="white-overlay"></div>
+
+    <!-- Formulario centrado -->
+    <div class="form-layer d-flex justify-content-center align-items-center">
+      <div class="dark-form text-white p-4 rounded-4 shadow-lg">
+
+        <!-- Encabezado -->
+        <div class="text-center mb-4">
+          <img src="assets/logo.png" alt="Logo" class="logo mb-2">
+          <!--<h4 class="mb-1">Nombre de la Empresa</h4>-->
+          <br>
+          <small>Atendido por: Carlos Córdoba</small>
+        </div>
+
+        <!-- Formulario -->
+        <form id="formulario">
+          <div class="mb-3">
+            <input type="text" class="form-control input-glass" id="nombre" required
+                   pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+"
+                   placeholder="Nombre completo"
+                   title="Solo letras y espacios">
+          </div>
+
+          <div class="mb-3 d-flex gap-2">
+            <select class="form-select input-glass w-auto" id="indicativo" required>
+              <option value="57">🇨🇴 +57</option>
+              <option value="52">🇲🇽 +52</option>
+              <option value="54">🇦🇷 +54</option>
+              <option value="56">🇨🇱 +56</option>
+              <option value="1">🇺🇸 +1</option>
+              <option value="34" selected>🇪🇸 +34</option>
+            </select>
+            <input type="tel" class="form-control input-glass" id="celular" required
+                   pattern="[0-9]{6,12}" maxlength="12" inputmode="numeric"
+                   placeholder="Número sin indicativo"
+                   title="Solo se permiten números (6 a 12 dígitos)">
+          </div>
+
+          <button type="submit" class="btn btn-warning w-100 mt-2">Enviar por WhatsApp</button>
+        </form>
+
       </div>
     </div>
-
-    <hr>
-
-    <!-- Formulario -->
-    <h4 class="text-center mb-4">Propuesta Inmobiliaria</h4>
-
-    <form id="formulario">
-      <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre completo</label>
-        <input type="text" class="form-control" id="nombre" required
-               pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" 
-               placeholder="Escribe tu nombre" 
-               title="Solo letras y espacios">
-      </div>
-
-      <div class="mb-3">
-        <label class="form-label">Indicativo y celular</label>
-        <div class="d-flex gap-2">
-          <select class="form-select w-auto" id="indicativo" required>
-            <option value="57">🇨🇴 +57</option>
-            <option value="52">🇲🇽 +52</option>
-            <option value="54">🇦🇷 +54</option>
-            <option value="56">🇨🇱 +56</option>
-            <option value="1">🇺🇸 +1</option>
-            <option value="34" selected>🇪🇸 +34</option>
-          </select>
-          <input type="tel" class="form-control" id="celular" required 
-                 pattern="[0-9]{6,12}" maxlength="12" inputmode="numeric" 
-                 placeholder="Número sin indicativo" 
-                 title="Solo se permiten números (6 a 12 dígitos)">
-        </div>
-      </div>
-
-      <button type="submit" class="btn btn-success w-100 mt-2">Enviar por WhatsApp</button>
-    </form>
   </div>
 
-  <!-- JavaScript separado -->
   <script src="js/formulario.js"></script>
 </body>
 </html>
